//protocol=10142;
option java_package = "com.chuangyou.common.protobuf.pb.item";
option java_outer_classname = "ItemUseMsgProto";
//物品使用
message ItemUseMsg {
 	optional int32 count= 1;		// 物品数量
	optional int32 pos = 2;			// 位置
	optional int32 bagType = 3;		// 背包类型

}